# url-compliance-checker

./: .gitignore  AI_INTEGRATION_SCHEMA.md  Blacklist keywords.xlsx  COMPLIANCE_EXAMPLES.md  NEXT_STEPS_PLAN.md  PRODUCTION_RUN_GUIDE.md  PRODUCTION_STATUS.md  PROJECT_OVERVIEW.md  Partners_Resources_EU(Sheet1).csv  Partners_Resources_EU.xlsx  README.md  SYSTEM_ARCHITECTURE.md  TEST_GUIDE.md  mcp-servers.md  pyproject.toml  recommended_env_structure.txt  requirements.txt  roadmap.md  set_env.sh
app/: __init__.py  main.py  test_batch.py  test_batch_scaling.py  test_search.py  test_url.py
data/: FILE_INVENTORY.json  FILE_INVENTORY.txt  admiral_markets_content_sample.txt  admiral_referrer_test_results.csv  compliance_test.csv  full_content_analysis.txt  improved_crawl_test.txt  keyword_test.csv  processing_summary.txt  test_10.csv  test_100.csv  test_1000.csv  test_10_urls.csv  test_admiral_mention_urls.csv  test_admiral_review.csv  test_admiral_urls.csv  test_batch_for_pipeline.csv  test_content_sample.txt  test_external_urls.csv  test_fix_verification.csv  test_new_admiral_urls.csv  test_urls_with_admiral_mentions.csv  test_working_urls.csv  urls_to_process.csv
docs/: ORGANIZATION.md  README.md  SCRIPTS.md  admiral_mention_detection_implementation.md  crawling_issues_and_solutions.md  project_file_explanations.md  roadmap.md  utf16_encoding_fix.md
memory-bank/: projectbrief.md  techContext.md
scripts/: access_pinecone_llm.py  analyze_blacklist_patterns.py  analyze_page_content.py  analyze_system_status.py  apply_speed_optimizations.py  check_pinecone_count.py  (+84 more)
(+1330 files in other folders)
